--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
+    "@ng-select/ng-select": "^7.0.0",
     "angular-calendar": "^0.29.0",
     "angularx-flatpickr": "^6.6.0",
     "date-fns": "^2.23.0",
