Usuario del servicio: Al crear y editar un usuario del servicio no se guardan los centro sanitarios asociados #92

--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,72 @@
               ],
               "outputHashing": "all"
             },
+            "prod-cpr": {
+              "outputPath": "dist/proyecto-teleasistencia-cpr-${fecha}",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "2mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.cpr.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "prod-p1": {
+              "outputPath": "dist/proyecto-teleasistencia-p1-${fecha}",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "2mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.p1.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "prod-talayuela": {
+              "outputPath": "dist/proyecto-teleasistencia-${fecha}",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "2mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.talayuela.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
